--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "^5.0.3"
   },
   "dependencies": {
-    "axios": "^1.3.4"
+    "axios": "^1.3.4",
+    "whatsappcloudapi_wrapper": "^1.0.13"
   }
 }
