feat(supabase): add base client to interact with database.

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
 META_WA_ACCESS_TOKEN=
-# TODO: review if necessary
 VERCEL_PROD_URL=
 WA_BUSSINESS_PHONE_NUMBER=
 META_WA_WABA_ID=
 META_WA_SENDER_PHONE_NUMBER_ID=
 META_WA_VERIFY_TOKEN=
+SUPABASE_URL=
+SUPABASE_ANON_KEY=
