--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "^5.0.3"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.13.1",
     "axios": "^1.3.4",
     "whatsappcloudapi_wrapper": "^1.0.13"
   }
