--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.13.1",
     "axios": "^1.3.4",
+    "ethers": "^6.2.3",
     "whatsappcloudapi_wrapper": "^1.0.13"
   }
 }
